fixing alignment for skills container for smaller devices

--- a/style/about.css
+++ b/style/about.css
@@ -495,7 +495,7 @@ body {
         height: auto;
         margin-top: 12%;
         text-align: center;
-        margin-right: -25%;
+        margin-right: -24%;
     }
 }
 @media screen and (min-width: 481px) {
@@ -547,7 +547,7 @@ body {
         text-align: center;
         font-size: 20px;
         margin-top: 12%;
-        margin-right: -25%;
+        margin-right: -27%;
     }
 }
 @media screen and (min-width: 481px) {
